api/swim_schema/src/schema/tests/derive/validated_form/generic_no_default.stderr
error[E0277]: the trait bound `S<Invalid>: NewTypeForm` is not satisfied
   --> $DIR/src/schema/tests/derive/validated_form/generic_no_default.rs:30:29
    |
30  |     let _s = Form::as_value(&S { a: 1, f: Invalid });
    |                             ^^^^^^^^^^^^^^^^^^^^^^^ the trait `NewTypeForm` is not implemented for `S<Invalid>`
    |
    = note: required because of the requirements on the impl of `StructuralWritable` for `S<Invalid>`
note: required by `as_value`
   --> $WORKSPACE/api/swim_form/src/lib.rs
    |
    |     fn as_value(&self) -> Value {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
